--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"dist/"
 	],
 	"scripts": {
+		"setup": "deps-docs",
 		"build": "tsdown",
 		"lint": "biome check",
 		"lint:fix": "biome check --fix",
@@ -18,7 +19,7 @@
 		"check": "npm run check:types && npm run lint",
 		"fix": "npm run check:types && npm run lint:fix",
 		"prebuild": "rimraf -g dist/*",
-		"prepublishOnly": "npm run check:types && npm run lint && npm run test"
+		"prepublishOnly": "npm run check"
 	},
 	"keywords": [
 		"translation"
