ci: add test command

--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
 	"scripts": {
 		"setup": "deps-docs",
 		"build": "tsdown",
+		"test": "npm run test:unit && npm run test:integration",
+		"test:unit": "node --test src/**/*.test.ts",
+		"test:integration": "node --test test/**/*.test.ts",
 		"lint": "biome check",
 		"lint:fix": "biome check --fix",
 		"check:types": "tsc --noEmit -p tsconfig.json",
 		"check": "npm run check:types && npm run lint",
 		"fix": "npm run check:types && npm run lint:fix",
-		"prepublishOnly": "npm run check"
+		"prepublishOnly": "npm run check && npm test"
 	},
 	"keywords": [
 		"translation"
